Rise dialect initial commit

--- a/mlir/tools/mlir-opt/CMakeLists.txt
+++ b/mlir/tools/mlir-opt/CMakeLists.txt
@@ -38,6 +38,7 @@ set(LIBS
   MLIRPass
   MLIRQuantizerTransforms
   MLIRQuantOps
+  RISE
   MLIRROCDLIR
   MLIRSPIRV
   MLIRStandardToSPIRVTransforms
