added current state of conversion experiments

--- a/mlir/tools/mlir-opt/CMakeLists.txt
+++ b/mlir/tools/mlir-opt/CMakeLists.txt
@@ -38,7 +38,8 @@ set(LIBS
   MLIRPass
   MLIRQuantizerTransforms
   MLIRQuantOps
-  RISE
+  MLIRRise
+  MLIRRiseToStandard
   MLIRROCDLIR
   MLIRSPIRV
   MLIRStandardToSPIRVTransforms
