--- a/mlir/lib/Conversion/CMakeLists.txt
+++ b/mlir/lib/Conversion/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(GPUToSPIRV)
 add_subdirectory(LinalgToLLVM)
 add_subdirectory(LoopsToGPU)
 add_subdirectory(LoopToStandard)
+add_subdirectory(RiseToStandard)
 add_subdirectory(StandardToLLVM)
 add_subdirectory(StandardToSPIRV)
 add_subdirectory(VectorToLLVM)
