--- a/mlir/tools/mlir-opt/CMakeLists.txt
+++ b/mlir/tools/mlir-opt/CMakeLists.txt
@@ -38,7 +38,7 @@ set(LIBS
   MLIRPass
   MLIRQuantizerTransforms
   MLIRQuantOps
-  RISE
+  MLIRRise
   MLIRROCDLIR
   MLIRSPIRV
   MLIRStandardToSPIRVTransforms
