Added riseModule op + matching against it for rise to imperative lowering

--- a/mlir/tools/mlir-opt/CMakeLists.txt
+++ b/mlir/tools/mlir-opt/CMakeLists.txt
@@ -40,6 +40,7 @@ set(LIBS
   MLIRQuantOps
   MLIRRise
   MLIRRiseToStandard
+  MLIRRiseToImperative
   MLIRROCDLIR
   MLIRSPIRV
   MLIRStandardToSPIRVTransforms
